# LibraryApp

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py  main.py
app/app_types/: BookStatus.py  UserType.py
app/db/: models.py  setup_db.py
app/db/data/: database.db  users.csv
app/notifications/: notifications.py
app/routes/: books.py  home.py  rentals.py  reports.py  users.py  wishlists.py
app/utils/: inventory_loader.py  users_loader.py
tests/types/: test_book_status.py  test_user_type.py
tests/utils/: test_inventory_loader.py  test_users_loader.py
